test/success/closure/generic_closure/main.sk
module Main {

fn sink[T](f: T) {

}

fn generic[T](value: &T) {
    let f = \x -> sink(x);
    f(value);
}

struct Foo {

}

struct Bar {

}

fn main() {
    let f = Foo();
    let b = Bar();
    generic(&f);
    generic(&b);
}

}