test/errors/already_moved/main.sk
module Main {

class Foo {

}

fn sink[T](f: T) {

}

fn main() {
    let f = Foo();
    sink(&f);
    sink(&f);
    sink(f);
    sink(f);
}

}
